# lean_scout

./: .gitignore  AGENTS.md  CLAUDE.md  Extract.lean  ExtractWith.lean  Extractor.lean  LeanScout.lean  LeanScoutTest.lean  Main.lean  PLAN.md  README.md  ScoutSchema.lean  Test.lean  TestLeanScout.lean  data.ipynb  extract.py  extract.sh  lake-manifest.json  lakefile.lean  lakefile.toml  main.py  pyproject.toml  run_tests  setup_subproject.py  setup_subproject.sh  test
.github/actions/tag-lean-version/: action.yml
.github/scripts/: tag-toolchain.sh
.github/workflows/: ci.yml  lean_action_ci.yml  lean_release_tag.yml  release-tag.yml  static.yml  tag-version.yml  update.yml
LeanScout/: DataExtractor.lean  DataExtractors.lean  ExtractWith.lean  Extractor.lean  Frontend.lean  InfoTree.lean  Init.lean  Logger.lean  Schema.lean  Subprocess.lean  Target.lean  TaskPool.lean  Types.lean
LeanScout/DataExtractors/: ConstDep.lean  ConstGraph.lean  ExprGraph.lean  Subterms.lean  Tactics.lean  Types.lean  Utils.lean
LeanScoutTest/: InputFrontendRegression.lean  ParallelTest1.lean  ParallelTest2.lean  ParallelTest3.lean  Schema.lean  TacticsMetavarRegression.lean  TacticsTest.lean
docs/plans/: extraction-consistency-regression-plan.md
src/lean_scout/: __init__.py  __main__.py  cli.py  orchestrator.py  parquet_writer.py  parquet_writer_cli.py  schema.py  utils.py  writer.py
test/: helpers.py  schema.py  test_dependency.py  test_parallel.py  test_query_library.py  test_schema.py  test_tactics.py  test_types.py
test/extractors/: conftest.py  test_const_dep.py  test_const_graph.py  test_tactics.py  test_tactics_schema.py  test_types.py  test_types_schema.py
test/fixtures/: const_dep.yaml  const_graph.yaml  dependency_tactics.yaml  tactics.yaml  types.yaml
test/integration/: test_input_frontend_regression.sh  test_lean_orchestrator.sh  test_tactics_metavar_regression.sh
test/internals/: test_cli.py  test_orchestrator.py  test_parquet_writer_cli.py  test_schema.py  test_utils.py  test_writer.py
test_project/: LeanScoutTestProject.lean  lake-manifest.json  lakefile.toml
test_project/LeanScoutTestProject/: Basic.lean  Lists.lean  ThrowingExtractor.lean
tests/: test.py
