[project]
name = "lean-scout"
version = "0.1.0"
description = "A tool for creating datasets from Lean4 projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.9",
    "tqdm>=4.66.0",
]

[project.scripts]
lean-scout-writer = "lean_scout.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lean_scout"]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
]
